<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AttackAreaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_3sdp"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bottom_corners"/>

        <TextView
            android:id="@+id/tv_area_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:text="@string/app_name"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/player_progress_linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/card_question"
        app:layout_constraintStart_toStartOf="@id/card_question"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        >

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/main_font"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/progress_blue"
            android:text="@string/you"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/img_player"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/avatar_woman_1"
            />
        <com.daimajia.numberprogressbar.NumberProgressBar

            android:id="@+id/player_progress_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"

            app:progress_unreached_color="@color/progress_gray"
            app:progress_reached_color="@color/progress_blue"

            app:progress_unreached_bar_height="0.75dp"
            app:progress_reached_bar_height="1.5dp"

            app:progress_text_size="10sp"
            app:progress_text_color="@color/progress_blue"
            app:progress_text_offset="1dp"
            app:progress_text_visibility="visible"

            app:progress_max="100"
            app:progress_current="0"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/owner_progress_linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/card_question"
        app:layout_constraintStart_toStartOf="@id/card_question"
        app:layout_constraintTop_toBottomOf="@id/player_progress_linear"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_5sdp"
        >

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/main_font"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/progress_red"
            android:text="@string/king"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/img_owner"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/avatar_man_1"
            />

        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/owner_progress_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"

            app:progress_unreached_color="@color/progress_gray"
            app:progress_reached_color="@color/progress_red"

            app:progress_unreached_bar_height="0.75dp"
            app:progress_reached_bar_height="1.5dp"

            app:progress_text_size="10sp"
            app:progress_text_color="@color/progress_red"
            app:progress_text_offset="1dp"
            app:progress_text_visibility="visible"

            app:progress_max="100"
            app:progress_current="0"
            />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/owner_progress_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/dark_main_color"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp"
            >
            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="?attr/actionBarSize"
                android:gravity="start"
                android:layout_margin="@dimen/_10sdp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_gravity="start"
                    />
            </HorizontalScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="@id/card_question"
        app:layout_constraintEnd_toEndOf="@id/card_question"
        app:layout_constraintTop_toBottomOf="@id/card_question"
        />


    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/btn_end_game"
        android:fontFamily="@font/main_font"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/main_color"
        android:text="@string/end_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>