<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="@color/light_main_color"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/tv_area_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/main_font"
                android:gravity="center"
                android:textSize="@dimen/_25sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:text="@string/app_name"
                />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_king"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="0dp"
                android:minWidth="@dimen/_150sdp"
                app:layout_constraintBottom_toTopOf="@id/tv_great"
                app:layout_constraintTop_toBottomOf="@id/tv_area_name"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/_150sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    >

                    <com.prush.typedtextview.TypedTextView
                        android:id="@+id/tv_the_king"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/iv_king_image"
                        android:textColor="@color/main_color"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp"
                        android:text="@string/You"
                        app:randomize_typing_speed="false"
                        app:randomize_type_seed="75"
                        app:show_cursor="false"
                        app:sentence_pause="1500"
                        app:split_sentences="true"
                        app:play_keystrokes_audio="false"
                        app:typing_speed="75"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        />

                    <ImageView
                        android:id="@+id/iv_king_image"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        app:layout_constraintTop_toBottomOf="@id/tv_the_king"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/tv_king_username"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avatar_man_1"
                        android:background="@color/shafaf"
                        android:padding="@dimen/_10sdp"
                        />

                    <TextView
                        android:id="@+id/tv_king_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/iv_king_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/main_color"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:textSize="@dimen/_18sdp"
                        android:text="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_user"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:minWidth="@dimen/_150sdp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/tv_great"
                app:layout_constraintTop_toBottomOf="@id/tv_area_name"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:visibility="gone"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/_150sdp"
                    android:layout_height="match_parent">

                    <com.prush.typedtextview.TypedTextView
                        android:id="@+id/tv_you"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/iv_user_image"
                        android:textColor="@color/main_color"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp"
                        android:text="@string/You"
                        app:randomize_typing_speed="false"
                        app:randomize_type_seed="75"
                        app:show_cursor="false"
                        app:sentence_pause="1500"
                        app:split_sentences="true"
                        app:play_keystrokes_audio="false"
                        app:typing_speed="75"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        />



                    <ImageView
                        android:id="@+id/iv_user_image"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        app:layout_constraintTop_toBottomOf="@id/tv_you"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/tv_user_username"
                        android:scaleType="fitCenter"
                        android:src="@drawable/avatar_man_1"
                        android:background="@color/shafaf"
                        android:padding="@dimen/_10sdp"
                        />

                    <TextView
                        android:id="@+id/tv_user_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/iv_user_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/main_color"
                        android:fontFamily="@font/main_font"
                        android:gravity="center"
                        android:textSize="@dimen/_18sdp"
                        android:text="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_great"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:fontFamily="@font/main_font"
                android:gravity="center"
                android:textSize="@dimen/_18sdp"
                android:text="@string/great"
                android:background="@drawable/shape_dark_main_back"
                android:paddingTop="@dimen/_5sdp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

